# dlsite-doujin-renamer

./: .pdm.toml  README.md  console_utils.py  main.py  pyproject.toml  renamer.py
scaner/: scaner.py
scraper/: scraper.py
