[project]
name = ""
version = ""
description = ""
authors = [
    {name = "arition", email = "aritionkb@gmail.com"},
]
dependencies = [
    "mutagen>=1.45.1",
    "pyquery>=1.4.3",
    "requests>=2.28.1",
    "peewee>=3.15.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
